--- a/examples/resources/public/index.html
+++ b/examples/resources/public/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <script src="js/compiled/famous_examples.js" type="text/javascript"></script>
-        <div id="clock">
+        <div id="msg">
 
         </div>
     </body>
