--- a/examples/resources/public/index.html
+++ b/examples/resources/public/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href="css/style.css" rel="stylesheet" type="text/css">
-        <link href="css/famous.css" rel="stylesheet" type="text/css">
-        <!--<link href="http://code.famo.us/famous/0.3/famous.css" rel="stylesheet" type="text/css">-->
-    </head>
-    <body>
-        <script src="js/compiled/famous_examples.js" type="text/javascript"></script>
-        <div id="msg">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Famous :: Seed Project</title>
+    <link rel="icon" href="favicon.ico?v=1" type="image/x-icon">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+      html, body {
+      width: 100%;
+      height: 100%;
+      margin: 0px;
+      padding: 0px;
+      }
+      body {
+      position: absolute;
+      -webkit-transform-style: preserve-3d;
+      transform-style: preserve-3d;
+      -webkit-font-smoothing: antialiased;
+      -webkit-tap-highlight-color: transparent;
+      -webkit-perspective: 0;
+      perspective: none;
+      overflow: hidden;
+      }
+    </style>
+  </head>
+  
+  <body>
+    <script src="js/compiled/famous_examples.js" type="text/javascript"></script>
+    <div id="msg">
 
-        </div>
-    </body>
+    </div>
+  </body>
 </html>
