--- a/examples/lesson-carousel-starter-kit/resources/public/index.html
+++ b/examples/lesson-carousel-starter-kit/resources/public/index.html
@@ -9,20 +9,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
       html, body {
-      width: 100%;
-      height: 100%;
-      margin: 0px;
-      padding: 0px;
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
       }
       body {
-      position: absolute;
-      -webkit-transform-style: preserve-3d;
-      transform-style: preserve-3d;
-      -webkit-font-smoothing: antialiased;
-      -webkit-tap-highlight-color: transparent;
-      -webkit-perspective: 0;
-      perspective: none;
-      overflow: hidden;
+        background: black;
+        position: absolute;
+        -webkit-transform-style: preserve-3d;
+        transform-style: preserve-3d;
+        -webkit-font-smoothing: antialiased;
+        -webkit-tap-highlight-color: transparent;
+        -webkit-perspective: 0;
+        perspective: none;
+        overflow: hidden;
       }
     </style>
   </head>
